Ingress-SpiderWiki.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-spiderwiki
  labels:
    app: app-spiderwiki
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-spiderwiki
  template:
    metadata:
      labels:
        app: app-spiderwiki
    spec:
      containers:
      - name:  spiderwiki
        image: voith/spiderwiki:v1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: spiderwiki-service
spec:
  type: ClusterIP
  selector:
    app: app-spiderwiki
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8888
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web-spiderwiki
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: spiderwiki-service
      port:
        number: 80
  rules:
  - host: spiderwiki.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: spiderwiki-service
            port:
              number: 80
